Reworked the openapi spec file and made some changes to properly use it
