# internal/core/port/in/api.go
@@ -10,7 +10,7 @@ import (
 type ApiUseCases interface {
 	CreateOrganisation(ctx context.Context, c *model.Organization) (*model.Organization, *model.Error)
 	GetAllOrganisations(ctx context.Context) (*model.ListOrganisations, *model.Error)
-	AuthenticateLoginService(ctx context.Context, username, password string) (*model.AuthenticationToken, *model.Error)
+	AuthenticateLoginService(ctx context.Context, username, password string) (*model.AuthenticatePostResponse, *model.Error)
 	UserCreate(ctx context.Context, c *model.User) (string, *model.Error)
 	// GetHealth(ctx context.Context)
 }
